# docs/swagger.json
@@ -326,7 +326,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "分頁獲取指定代理的站內信列表",
+                "description": "分頁獲取指定代理的站內信列表，按創建時間由近到遠排序",
                 "consumes": [
                     "application/json"
                 ],
@@ -363,13 +363,6 @@
                         "example": 10,
                         "description": "每頁數量 - 每頁返回的記錄數，範圍1-50",
                         "name": "page_size",
-                        "in": "query"
-                    },
-                    {
-                        "type": "boolean",
-                        "example": false,
-                        "description": "已讀狀態篩選 - true只顯示已讀，false只顯示未讀，不填顯示全部",
-                        "name": "is_read",
                         "in": "query"
                     }
                 ],
@@ -1698,9 +1691,6 @@
                     "description": "通過關聯取得",
                     "type": "string"
                 },
-                "created_at": {
-                    "type": "string"
-                },
                 "global_agent_id": {
                     "description": "通過關聯取得",
                     "type": "string"
@@ -1711,17 +1701,8 @@
                 "is_read": {
                     "type": "boolean"
                 },
-                "read_at": {
-                    "type": "string"
-                },
-                "sent_at": {
-                    "type": "string"
-                },
                 "title": {
                     "description": "通過關聯取得",
-                    "type": "string"
-                },
-                "updated_at": {
                     "type": "string"
                 }
             }
